hamburger menu horizontal scroll fixed

--- a/src/css/small.css
+++ b/src/css/small.css
@@ -4,7 +4,7 @@
 /* Main rules */
 * {
     box-sizing: border-box;
-  }
+}
 
 :root {
     /* colors */
@@ -46,7 +46,7 @@ header {
     background-color: var(--blue);
     position: static;
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 header a {
@@ -70,14 +70,25 @@ header h1 {
 }
 
 .menu {
-  position: absolute;
-  top: 0px;
-  right: -150px;
-  background: #fff;
-  width: 150px;
-  height: 100%;
   transform: translate3d(-150px, 0, 0);
   transition: transform 0.35s;
+}
+
+.menu.show {
+  background: #fff; 
+  width: 150px;
+  height: 100%; 
+  position: absolute;
+  right: -150px;
+  top: 0;
+}
+
+#menu-list.hide {
+    display: none;
+}
+
+.hidden {
+    display: none;
 }
 
 .menu ul {
@@ -90,31 +101,49 @@ header h1 {
     padding-bottom: 10px;
 }
 
+.menu {
+    flex-grow: 1;
+}
+
+.menu label {
+    float: right;
+}
+
 .menu img {
-    margin: 5px;
-    margin-top: 10px;
     width: 50px;
     height: 50px;
     padding: 0;
     padding-right: 5px;
+    cursor: pointer;
 }
 
-label.menu-toggle  {
-position: absolute;    
-left: -55px;
-width: 55px;
-height: 50px;
-padding: 0;
-background-color: var(--blue);
-cursor: pointer;
+label.menu-toggle {
+    position: absolute;
+    width: 55px;
+    height: 50px;
+    padding: 0;
+    background-color: var(--blue);
+    cursor: pointer;    
+}
+/* when hid */
+label.menu-toggle.hide {
+    right: 0;
+    top: -26px;
+}
+/* when shown */
+label.menu-toggle.show {
+    right: 150px;
+    top: 7px;
+    border: 2px solid black;
+    border-right: none;
 }
 
 .menu-checkbox {
     display: none;
 }
 
-.menu-checkbox:checked + .menu {
-  transform: translate3d(0, 0, 0);
+.menu-checkbox:checked+.menu {
+    transform: translate3d(0, 0, 0);
 }
 
 /* hide stuff that shouldn't show on the small page in the header */
@@ -132,7 +161,7 @@ footer {
 
 #footer-flex a {
     color: black;
-} 
+}
 
 /* Button */
 button {
@@ -163,10 +192,10 @@ hr {
     list-style-type: none;
     row-gap: 10px;
     padding: 0;
-  }
+}
 
 .card-list li {
-    
+
     border: 1px solid black;
     text-align: center;
     padding: .5em;
@@ -188,7 +217,7 @@ hr {
 /* category page */
 
 #category-page .card-list li {
-    
+
     border: 1px solid black;
     text-align: center;
     padding: .5em;
@@ -235,12 +264,14 @@ hr {
 #item-page {
     text-align: center;
 }
+
 #item-page p {
     font-size: 1.2em;
 }
 
 
-#item-page form label, #item-page form input {
+#item-page form label,
+#item-page form input {
     font-size: 1.2em;
 }
 
@@ -250,6 +281,6 @@ hr {
     margin-right: 10px;
 }
 
-#drop-section p{
+#drop-section p {
     margin-bottom: 5px;
 }
